# otus.lessons.06.01

./: .gitignore  .travis.yml  CMakeLists.txt  otus.lessons.06.01.sln
docker/: Dockerfile  docker.sh
otus.lessons.06.01/: CMakeLists.txt  allocator.h  container.h  otus.lessons.06.01.cpp  otus.lessons.06.01.vcxproj  page.cpp  page.h  stdafx.cpp  stdafx.h  test.cpp
src/: CMakeLists.txt  allocator.h  container.h  in.version.h  main.cpp  otus.lessons.06.01.vcxproj  otus.lessons.06.01.vcxproj.filters  page.cpp  page.h  stdafx.cpp  stdafx.h  test.cpp  version.h
